--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.data.mongodb.database=theia-in-situ
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 logging.level.org.springframework.data=debug
 
-#spring.data.mongodb.uri = ${MONGODB_URL}
+#For dev or standalone install purpose. Kubernetes cluster: This variable will
+# be overloaded by env variable defined in deployment.yml file 
+spring.data.mongodb.uri = ${MONGODB_URL}
