fix api_host properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.data.mongodb.database=theia-in-situ
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 logging.level.org.springframework.data=debug
 
-#For dev or standalone install purpose. Kubernetes cluster: This variable will
+#For dev or standalone install purpose. Kubernetes cluster: Those variables will
 # be overloaded by env variable defined in deployment.yml file 
 spring.data.mongodb.uri = ${MONGODB_URL}
+app.api_host = http://in-situ.theia-land.fr
