feat enable http trace debug option

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 spring.data.mongodb.database=theia-in-situ
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-logging.level.org.springframework.data=debug
+#logging.level.org.springframework.data=debug
+management.endpoints.web.exposure.include=httptrace
 
 #For dev or standalone install purpose. Kubernetes cluster: Those variables will
 # be overloaded by env variable defined in deployment.yml file 
