--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 spring.data.mongodb.database=theia-in-situ
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 #logging.level.org.springframework.data=debug
-management.endpoints.web.exposure.include=httptrace
-server.tomcat.accesslog.enabled=true
-logging.level.org.apache.tomcat=DEBUG
-logging.level.org.apache.catalina=DEBUG
+#management.endpoints.web.exposure.include=httptrace
+#server.tomcat.accesslog.enabled=true
+#logging.level.org.apache.tomcat=DEBUG
+#logging.level.org.apache.catalina=DEBUG
 
 
 #For dev or standalone install purpose. Kubernetes cluster: Those variables will
