--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,9 @@ build_dataportal_commit:
   stage: build
   only:
     variables:
-      - $CI_COMMIT_MESSAGE =~ /^(feat|fix|perf|test)*/i
+      - $CI_COMMIT_MESSAGE =~ /^(feat|fix|perf|test)*$/i
+  except:
+    - tags
   script:
     - mvn compile jib:build -Djib.to.image=$CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA -Djib.to.auth.username=$CI_REGISTRY_USER -Djib.to.auth.password=$CI_JOB_TOKEN
     
