--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.data.mongodb.database=theia-in-situ
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-#logging.level.org.springframework.data=debug
+logging.level.org.springframework.data=debug
 #management.endpoints.web.exposure.include=httptrace
 #server.tomcat.accesslog.enabled=true
 #logging.level.org.apache.tomcat=DEBUG
