refactor using service layer and unit test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ logging.level.org.springframework.data=debug
 
 #For dev or standalone install purpose. Kubernetes cluster: Those variables will
 # be overloaded by env variable defined in deployment.yml file 
-spring.data.mongodb.uri = ${MONGODB_URL}
+#spring.data.mongodb.uri = ${MONGODB_URL}
+spring.data.mongodb.uri = mongodb://test
 #app.api_host = http://in-situ.theia-land.fr
 app.api_host = http://localhost
